# Chameleon

./: README.md  setup.cfg
.github/workflows/: .pylintrc  pull_request.yml  release.yml
chameleon/: __init__.py
chameleon/base/: __init__.py  utils.py
chameleon/base/blocks/: __init__.py  conv_block.py
chameleon/base/components/: __init__.py  activation.py  dropout.py  loss.py  norm.py  pooling.py
chameleon/base/layers/: __init__.py  aspp.py  grl.py  selayer.py  vae.py  weighted_sum.py
chameleon/base/optim/: __init__.py  polynomial_lr_warmup.py  warm_up.py
chameleon/modules/: __init__.py
chameleon/modules/backbones/: __init__.py  gpunet.py  timm.py
chameleon/modules/necks/: __init__.py  bifpn.py  fpn.py
chameleon/registry/: registry.py
chameleon/tools/: __init__.py  custom_aug.py  mixin.py
chameleon/tools/calflops/: flops_counter.py  readme.md
docs/: chameleon.md
tests/backbone/: test_backbone.py
tests/base/: test_power_module.py  test_utils.py
tests/base/blocks/: test_conv_block.py
tests/base/components/: test_activation.py  test_loss.py  (+2 more)
tests/efficientdet/: test_efficientdet.py
tests/neck/: test_bifpn.py  test_fpn.py  test_neck.py
tests/nn/: test_PowerModule.py  test_aspp.py  test_block.py  test_cnn.py  test_grl.py  test_mbcnn.py  test_positional_encoding.py  test_selayer.py  test_vae.py  test_weightedsum.py
tests/registry/: test_registry.py  test_root.py
tests/tools/: test_calflops.py
tests/transformers/: testMetaFormer.py  testMobileViT.py  testPoolFormer.py  testViT.py  test_build_transformers.py  test_utils_in_trans.py
(+16 files in other folders)
