[metadata]
name = chameleon
version = attr: chameleon.__version__
description = Torch based deep learning library.
long_description = file: README.md
license = Apache License 2.0
classifiers=
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
python_requires = >=3.10,<=3.12
url = https://github.com/DocsaidLab/Chameleon.git

[options]
packages = find:
include_package_data = True
setup_requires=
    pip
    setuptools
    wheel
install_requires =
    timm>=0.5.4
    scikit-learn
    transformers
    torch
    torchvision
    torchmetrics
    albumentations
    ptflops==0.7.0
    calflops
    lightning
    rich

[options.packages.find]
exclude =
    docker
    demo
    tests
    benchmarks